Cambio masivo de Vistas

--- a/MVC_MultitecUA/Views/CategoriaUsuario/Edit.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaUsuario/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editar @ViewData["nombre"]</h2>
+<h2>Editar Categoría de Usuario: @ViewData["nombre"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Categorías de Proyecto", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
