--- a/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
+++ b/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Eventos filtrados";
 }
 
-<h2>Eventos filtrados por categoría y/o fecha</h2>
+<h2>Filtrar Eventos por categoría y/o fecha</h2>
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
