--- a/MVC_MultitecUA/Views/Mensaje/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/Delete.cshtml
@@ -38,6 +38,30 @@
             @Html.DisplayFor(model => model.Fecha)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.EstadoLecutra)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EstadoLecutra)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BandejaAutor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BandejaAutor)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BandejaReceptor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BandejaReceptor)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
