--- a/MVC_MultitecUA/Views/Recuerdo/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Delete.cshtml
@@ -10,7 +10,7 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Recuerdos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 
-<h3¿Estás seguro de que deseas borrar esto?</h3>
+<h3>¿Estás seguro de que deseas borrar esto?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
