--- a/MVC_MultitecUA/Views/CategoriaProyecto/Delete.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaProyecto/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Borrar";
 }
 
-<h2>Borrar @ViewData["nombre"]</h2>
+<h2>Borrar la Categoría de Proyecto: @ViewData["nombre"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Categorías de Proyecto", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
