--- a/MVC_MultitecUA/Views/CategoriaProyecto/Details.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaProyecto/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Detalles";
 }
 
-<h2>Detalles de @ViewData["nombre"]</h2>
+<h2>Detalles de la Categoría de Proyecto: @ViewData["nombre"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Categorías de Proyecto", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
