--- a/MVC_MultitecUA/Views/CategoriaProyecto/Index.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaProyecto/Index.cshtml
@@ -19,7 +19,9 @@
 		<th>
 			@Html.DisplayNameFor(model => model.Nombre)
 		</th>
-		<th></th>
+        <th>
+            Acciones
+        </th>
 	</tr>
 
 	@foreach (var item in Model)
