--- a/MVC_MultitecUA/Views/CategoriaUsuario/Index.cshtml
+++ b/MVC_MultitecUA/Views/CategoriaUsuario/Index.cshtml
@@ -20,7 +20,9 @@
 		<th>
 			@Html.DisplayNameFor(model => model.Nombre)
 		</th>
-		<th></th>
+		<th>
+            Acciones
+        </th>
 	</tr>
 
 	@foreach (var item in Model)
