--- a/MVC_MultitecUA/Views/Mensaje/EditAutor.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/EditAutor.cshtml
@@ -1,18 +1,20 @@
 ﻿@model MVC_MultitecUA.Models.MensajeModel
 
 @{
-	ViewBag.Title = "Editar";
+	ViewBag.Title = "Editar bandeja autor";
 }
 
-<h2>Editar</h2>
+<h2>Editar la bandeja del autor de Mensaje</h2>
 
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Mensajes", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 @using (Html.BeginForm())
 {
 	@Html.AntiForgeryToken()
 
 	<div>
-		<h4>Editar</h4>
 		<hr />
 		<dl class="dl-horizontal">
 			<dt>
