--- a/MVC_MultitecUA/Views/Mensaje/Index.cshtml
+++ b/MVC_MultitecUA/Views/Mensaje/Index.cshtml
@@ -9,80 +9,90 @@
 	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
+    <h3>Filtros:</h3>
+                                                                <!-- TODO: HARECER FILTROS
+    @using (Html.BeginForm("ForNick", "Usuario"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group form-inline">
+                <div class="col-md-10">
+                    <label for="nick">Nick: </label><input class="form-control" type="text" name="nick" />
+                    <input type="submit" value="Filtrar por Nick" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }-->
+</p>
+<p>
 	@Html.ActionLink("Nuevo Mensaje", "Create")
 </p>
 <table class="table">
-<hr />
-	<tr>
-		<th>
-			@Html.DisplayNameFor(model => model.Titulo)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Cuerpo)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.NombreAutor)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.NickAutor)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.BandejaAutor)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.NombreReceptor)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.NickReceptor)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.BandejaReceptor)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.EstadoLectura)
-		</th>
-
-		<th></th>
-	</tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Titulo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Cuerpo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NickAutor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BandejaAutor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NickReceptor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BandejaReceptor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EstadoLectura)
+        </th>
+        <th>
+            Acciones
+        </th>
+    </tr>
 
 	@foreach (var item in Model)
 	{
-	<tr>
-		<td>
-			@Html.DisplayFor(modelItem => item.Titulo)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.Cuerpo)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.NombreAutor)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.NickAutor)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.BandejaAutor)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.NombreReceptor)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.NickReceptor)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.BandejaReceptor)
-		</td>
-		<td>
-			@Html.DisplayFor(modelItem => item.EstadoLectura)
-		</td>
-		<td>
-			@Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-			@Html.ActionLink("Cambiar bandeja de autor", "EditAutor", new { id = item.Id }) |
-			@Html.ActionLink("Cambiar bandeja de receptor", "EditReceptor", new { id = item.Id }) |
-			@Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-			@Html.ActionLink("Borrar", "Delete", new { id = item.Id })
-		</td>
-	</tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Titulo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Cuerpo)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NickAutor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BandejaAutor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NickReceptor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BandejaReceptor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.EstadoLectura)
+        </td>
+        <td>
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
+            @Html.ActionLink("Cambiar estado lectura", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Cambiar bandeja de autor", "EditAutor", new { id = item.Id }) |
+            @Html.ActionLink("Cambiar bandeja de receptor", "EditReceptor", new { id = item.Id })
+        </td>
+    </tr>
 	}
 
 </table>
