--- a/MVC_MultitecUA/Views/Noticia/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Borrar";
 }
 
-<h2>Borrar @ViewData["titulo"]</h2>
+<h2>Borrar la Noticia: @ViewData["titulo"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Noticias", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
