--- a/MVC_MultitecUA/Views/Noticia/Details.cshtml
+++ b/MVC_MultitecUA/Views/Noticia/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Detalles";
 }
 
-<h2>Detalles de @ViewData["titulo"]</h2>
+<h2>Detalles de la Noticia: @ViewData["titulo"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Noticias", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
