--- a/MVC_MultitecUA/Views/Proyecto/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Borrar";
 }
 
-<h2>Borrar @ViewData["titulo"]</h2>
+<h2>Borrar el Proyecto: @ViewData["titulo"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Proyectos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
@@ -28,6 +28,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Estado)
         </dd>
 
     </dl>
