--- a/MVC_MultitecUA/Views/Proyecto/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editar @ViewData["titulo"]</h2>
+<h2>Editar Proyecto: @ViewData["titulo"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Proyectos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
