--- a/MVC_MultitecUA/Views/Recuerdo/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editar el recuerdo: @ViewData["recuerdo"]</h2>
+<h2>Editar Recuerdo: @ViewData["recuerdo"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Recuerdos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
