--- a/MVC_MultitecUA/Views/Recuerdo/Index.cshtml
+++ b/MVC_MultitecUA/Views/Recuerdo/Index.cshtml
@@ -12,27 +12,33 @@
 	@Html.ActionLink("Nuevo Recuerdo", "CreateNoId")
 </p>
 <table class="table">
-	<tr>
-		<th>
-			@Html.DisplayNameFor(model => model.Titulo)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Cuerpo)
-		</th>
-		<th>
-			<label>IdEvento</label>
-		</th>
-		<th>
-			<label>Evento</label>
-		</th>
-		<th>
-			Acciones
-		</th>
-	</tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Titulo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Cuerpo)
+        </th>
+        <th>
+            <label>IdEvento</label>
+        </th>
+        <th>
+            <label>Evento</label>
+        </th>
+        <th>
+            Acciones
+        </th>
+    </tr>
 
 	@foreach (var item in Model)
 	{
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Titulo)
         </td>
@@ -47,8 +53,8 @@
         </td>
         <td>
             @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id })
         </td>
     </tr>
 	}
