--- a/MVC_MultitecUA/Views/Servicio/Details.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Detalles";
 }
 
-<h2>Detalles del servicio: @ViewData["servicio"]</h2>
+<h2>Detalles del Servicio: @ViewData["servicio"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
@@ -13,6 +13,14 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -35,7 +43,7 @@
         <dd>
             @Html.DisplayFor(model => model.Estado)
         </dd>
-       
+
 
     </dl>
 </div>
