--- a/MVC_MultitecUA/Views/Servicio/Index.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/Index.cshtml
@@ -9,56 +9,64 @@
 	<label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
+    <h3>Filtros:</h3>
+    @using (Html.BeginForm("PorEstado", "Servicio"))
+    {
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group form-group form-inline">
+                <div class="col-md-10">
+                    <label>Estado: </label>
+                    @Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
+                    <input type="submit" value="Buscar" class="btn btn-default" />
+                </div>
+
+            </div>
+        </div>
+    }
+</p>
+<p>
 	@Html.ActionLink("Nuevo Servicio", "Create")
-
-	@using (Html.BeginForm("PorEstado", "Servicio"))
-	{
-		<div class="form-horizontal">
-			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-			<div class="form-group form-group form-inline">
-				<div class="col-md-10">
-					<label>Filtrar por Estado: </label>
-					@Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
-					<input type="submit" value="Buscar" class="btn btn-default" />
-				</div>
-
-			</div>
-		</div>
-	}
 </p>
 <table class="table">
-	<tr>
-		<th>
-			@Html.DisplayNameFor(model => model.Nombre)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Descripcion)
-		</th>
-		<th>
-			@Html.DisplayNameFor(model => model.Estado)
-		</th>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Descripcion)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Estado)
+        </th>
 
         <th>Acciones</th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { item.Id }) |
-                @Html.ActionLink("Borrar", "Delete", new { item.Id })
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Descripcion)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Estado)
+        </td>
+        <td>
+            @Html.ActionLink("Editar", "Edit", new { item.Id }) |
+            @Html.ActionLink("Detalles", "Details", new { item.Id }) |
+            @Html.ActionLink("Borrar", "Delete", new { item.Id })
+        </td>
+    </tr>
     }
 
 </table>
