--- a/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
+++ b/MVC_MultitecUA/Views/Servicio/PorEstado.cshtml
@@ -9,14 +9,14 @@
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Servicios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
 <p>
-    @Html.ActionLink("Nuevo servicio", "Create")
+    <h3>Filtros:</h3>
     @using (Html.BeginForm("PorEstado", "Servicio"))
     {
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group form-group form-inline">
                 <div class="col-md-10">
-                    <label>Filtrar por estado: </label>
+                    <label>Estado: </label>
                     @Html.DropDownList("Estados", new SelectList((System.Collections.IEnumerable)ViewData["listaEstadosServicio"]), new { @class = "form-control" })
                     <input type="submit" value="Buscar" class="btn btn-default" />
                 </div>
