--- a/MVC_MultitecUA/Views/Solicitud/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Edit.cshtml
@@ -6,12 +6,13 @@
 
 <h2>Editar</h2>
 
+<p class="text-center">
+    <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Solicitudes", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
+</p>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <h4>Solicitud</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
