--- a/MVC_MultitecUA/Views/Usuario/Edit.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editar @ViewData["usuario"]</h2>
+<h2>Editar Usuario: @ViewData["usuario"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Usuarios", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
