--- a/MVC_MultitecUA/Views/Usuario/ForNick.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/ForNick.cshtml
@@ -14,7 +14,7 @@
     {
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            <div class="form-group form-inline">
                 <div class="col-md-10">
                     <label for="nick">Nick: </label><input class="form-control" type="text" name="nick" />
                     <input type="submit" value="Filtrar por Nick" class="btn btn-default" />
@@ -27,7 +27,7 @@
     {
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            <div class="form-group form-inline">
                 <div class="col-md-10">
                     <label for="rol">Rol: </label>
                     @Html.DropDownList("rol", new SelectList((System.Collections.IEnumerable)ViewData["listaRoles"]), new { @class = "form-control" })
@@ -41,7 +41,7 @@
     {
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
+            <div class="form-group form-inline">
                 <div class="col-md-10">
                     <label for="categoria">Categoría: </label>
                     @Html.DropDownList("categoria", new SelectList((System.Collections.IEnumerable)ViewData["listaCategoriasUsuarios"]), new { @class = "form-control" })
@@ -51,7 +51,6 @@
         </div>
     }
 </p>
-<p>@Html.ActionLink("Nuevo Usuario", "Create")</p>
 <table class="table">
     <tr>
         <th>
@@ -73,39 +72,44 @@
             @Html.DisplayNameFor(model => model.Rol)
         </th>
         <th>
+            Proyectos
+        </th>
+        <th>
             Acciones
         </th>
-        <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaAlta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nick)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rol)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
-                @Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FechaAlta)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Nick)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Rol)
+        </td>
+        <td>
+            @Html.ActionLink("Proyectos", "ProyectosUsuarioPertenece", "Proyecto", new { id = item.Id }, null)
+        </td>
+        <td>
+            @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Borrar", "Delete", new { id = item.Id }) |
+            @Html.ActionLink("Cambiar Rol", "ChangeRol", new { id = item.Id })
+        </td>
+    </tr>
     }
 
 </table>
