--- a/MVC_MultitecUA/Views/Usuario/UsuariosParticipantes.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/UsuariosParticipantes.cshtml
@@ -29,9 +29,11 @@
             @Html.DisplayNameFor(model => model.Rol)
         </th>
         <th>
+            Proyectos
+        </th>
+        <th>
             Acciones
         </th>
-        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -54,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rol)
+            </td>
+            <td>
+                @Html.ActionLink("Proyectos", "ProyectosUsuarioPertenece", "Proyecto", new { id = item.Id }, null)
             </td>
             <td>
                 @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
