Cambio masivo de Vistas

--- a/MVC_MultitecUA/Views/Evento/Delete.cshtml
+++ b/MVC_MultitecUA/Views/Evento/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Borrar";
 }
 
-<h2>Borrar el evento: @ViewData["nombreEvento"]</h2>
+<h2>Borrar el Evento: @ViewData["nombreEvento"]</h2>
 
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Eventos", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
